# m4gb

./: .travis.yml  COPYRIGHT.txt  Makefile  Makefile.am  Makefile.local  README.md  configure.ac  generator.sh  install_boost.sh  install_fgb.sh  install_givaro.sh  install_openf4.sh  solver.sh
contrib/: program_options.hpp  runtime_stats.cpp  runtime_stats.hpp  string_algo.hpp  thread_pool.hpp  threadpool.hpp
lib/: detail.hpp  gf_2n_simple.hpp  gf_elem_simple.hpp  gf_p_givaro.hpp  gf_p_simple.hpp  gf_pn_givaro.hpp  logger.hpp  monomial_base.hpp  monomial_degrevlex.hpp  options.hpp  parser.hpp  polynomial_int.hpp  polynomial_simple.hpp  solver_base.hpp
m4/: ax_fgb.m4  ax_givaro.m4  ax_openf4.m4
polysysgen/: polysysgen.sh
solver/: common.hpp  config.hpp  fgb.cpp  fgb.hpp  generator.cpp  m4gb.hpp  openf4.cpp  openf4.hpp  polysysgen.sh
src/: common.hpp  config.hpp  fgb.cpp  fgb.hpp  generator.cpp  m4gb.cpp  m4gb.hpp  openf4.hpp
testdata/gf256/: 256_16_mq-test0.degrevlex  256_16_mq-test0.in
testdata/gf31/: 31_16_mq-test0.degrevlex  31_16_mq-test0.in
testdata/gf4294967291/: 4294967291_16_mq-test0.degrevlex  4294967291_16_mq-test0.in
testdata/gf9223372036854775783/: 9223372036854775783_16_mq-test0.degrevlex  9223372036854775783_16_mq-test0.in
tests/: Makefile.am  contrib_runtime_stats.cpp  lib_detail.cpp  lib_gf_2n_simple.cpp  lib_gf_p_givaro.cpp  lib_gf_p_simple.cpp  lib_gf_pn_givaro.cpp  lib_monomial_degrevlex.cpp  lib_parser.cpp  lib_polynomial.cpp  lib_polynomial_simple.cpp  solver_test.sh  test_core.hpp
