TESTS = test_detail test_gf_p_simple test_gf_2n_simple test_monomial_degrevlex test_polynomial test_parser

test_detail_SOURCES               = ../tests/lib_detail.cpp
test_gf_p_simple_SOURCES          = ../tests/lib_gf_p_simple.cpp
test_gf_2n_simple_SOURCES         = ../tests/lib_gf_2n_simple.cpp
test_monomial_degrevlex_SOURCES   = ../tests/lib_monomial_degrevlex.cpp
test_polynomial_SOURCES           = ../tests/lib_polynomial.cpp
test_parser_SOURCES               = ../tests/lib_parser.cpp

check_PROGRAMS = $(TESTS)
