TESTS = test_detail test_gf_p_simple test_gf_2n_simple test_monomial_degrevlex test_polynomial test_parser test_runtime_stats

test_detail_SOURCES               = lib_detail.cpp
test_gf_p_simple_SOURCES          = lib_gf_p_simple.cpp
test_gf_2n_simple_SOURCES         = lib_gf_2n_simple.cpp
test_monomial_degrevlex_SOURCES   = lib_monomial_degrevlex.cpp
test_polynomial_SOURCES           = lib_polynomial.cpp
test_parser_SOURCES               = lib_parser.cpp
test_runtime_stats_SOURCES        = contrib_runtime_stats.cpp

check_PROGRAMS = $(TESTS)
